# semantic-document-indexer

./: .gitignore  README.md  database_manager.py  debug_chunks.txt  document_loader.py  embedding_client.py  index_documents.py  pyproject.toml  requirements.txt  text_splitter.py
.cursor/rules/: python-docs.mdc  python-testing.mdc
src/: document_loader.py  embedding_client.py  index_documents.py  text_splitter.py
tests/: test_database_manager.py  test_document_loader.py  test_embedding_client.py  test_index_documents.py  test_text_splitter.py
